--- a/hax/kryon_aums_2016.yaml
+++ b/hax/kryon_aums_2016.yaml
@@ -64,7 +64,7 @@ ArtistData:
       date_end: '2016-01-10'
       title: '"What you Don''t Know" + "Communications w/ Spirit" (4)'
       locations:
-      - Boulder,CO,USA,
+      - Boulder,CO,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_boulder_16.html
@@ -80,14 +80,14 @@ ArtistData:
       - http://audio.kryon.com/en/Boulder-SUN-main-16.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_phoenix-16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-01-16'
       date_end: '2016-01-17'
       title: '"Five in a Circle" + "Basics of Belief" (3)'
       locations:
-      - Phoenix,AZ,USA,
+      - Phoenix,AZ,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_phoenix-16.html
@@ -102,14 +102,14 @@ ArtistData:
       - http://audio.kryon.com/en/Phoenix-MAINi-SUN.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_sanantonio-16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-01-23'
       date_end: '2016-01-24'
       title: '"Quantum Patterns" + "Assumptions-1" (3)'
       locations:
-      - San Antonio,TX,USA,
+      - San Antonio,TX,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_sanantonio-16.html
@@ -124,14 +124,14 @@ ArtistData:
       - http://audio.kryon.com/en/SanAntonio16-SUN.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_edmonton_16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-06 17:05:12'
       date_begin: '2016-02-06'
       date_end: ''
       title: '"Assumptions-2" (2)'
       locations:
-      - Edmonton,AB,CAN,
+      - Edmonton,AB,CAN,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_edmonton_16.html
@@ -145,14 +145,14 @@ ArtistData:
       - http://audio.kryon.com/en/edmon-16-main.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_reddeer_16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-06 17:08:36'
       date_begin: '2016-02-07'
       date_end: ''
       title: '"Five Concepts for the New Human" (2)'
       locations:
-      - Red Deer,AB,CAN,
+      - Red Deer,AB,CAN,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_reddeer_16.html
@@ -166,14 +166,14 @@ ArtistData:
       - http://audio.kryon.com/en/reddeer-16-main.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_toronto_16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-02-13'
       date_end: '2016-02-14'
       title: '"Love" + "Letting" Go (3)'
       locations:
-      - Toronto,ON,CAN,
+      - Toronto,ON,CAN,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_toronto_16.html
@@ -188,14 +188,14 @@ ArtistData:
       - http://audio.kryon.com/en/Toronto-sun-main-16.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_sarasota_16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-02-20'
       date_end: ''
       title: '"Listening to the Voice of Spirit" (2)'
       locations:
-      - Sarasota,FL,USA,
+      - Sarasota,FL,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_sarasota_16.html
@@ -209,14 +209,14 @@ ArtistData:
       - http://audio.kryon.com/en/Sarasota-main-16.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_jacksonville_16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-02-21'
       date_end: ''
       title: '"Completing the Circle" (2)'
       locations:
-      - Jacksonville,FL,USA,
+      - Jacksonville,FL,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_jacksonville_16.html
@@ -230,14 +230,14 @@ ArtistData:
       - http://audio.kryon.com/en/Jacksonville-main-16.mp3
       scrolls: []
       visions: []
-      dump:
+      dump: 
     http://www.kryon.com/cartprodimages/2016%20downloads/download_kelowna-16.html: !ruby/object:UncleKryon::AlbumData
       updated_on: '2018-08-04 00:50:12'
       date_begin: '2016-02-27'
       date_end: '2016-02-28'
       title: '"New Systems" + "The Joy of Spirit" (3)'
       locations:
-      - Kelowna,BC,CAN,
+      - Kelowna,BC,CAN,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_kelowna-16.html
@@ -300,7 +300,7 @@ ArtistData:
       date_end: ''
       title: '"Melding with Real Physics" (2)'
       locations:
-      - Berkeley Springs,WV,USA,
+      - Berkeley Springs,WV,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_berkeleyS_16.html
@@ -322,7 +322,7 @@ ArtistData:
       date_end: ''
       title: '"Recalibration Completion" (2)'
       locations:
-      - Greensboro,NC,USA,
+      - Greensboro,NC,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Greensboro_16.html
@@ -344,7 +344,7 @@ ArtistData:
       date_end: ''
       title: '"Getting Connected part 1" (2)'
       locations:
-      - Portland,ME,USA,
+      - Portland,ME,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Portland-M_16.html
@@ -366,7 +366,7 @@ ArtistData:
       date_end: ''
       title: '"Gettting Conneccted part 2" (2)'
       locations:
-      - Columbus,OH,USA,
+      - Columbus,OH,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Columbus_16.html
@@ -388,7 +388,7 @@ ArtistData:
       date_end: '2016-04-17'
       title: '"Spiritual Common Sense" + "Intellectualizing God" (3)'
       locations:
-      - Ottawa,ON,CAN,
+      - Ottawa,ON,CAN,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_ottawa_16.html
@@ -412,7 +412,7 @@ ArtistData:
       date_end: ''
       title: The Salt Mine Experience - Germany (1 HR)
       locations:
-      - Berchtesgaden,,DEU,
+      - Berchtesgaden,,DEU,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_SALTMINE_16.html
@@ -438,7 +438,7 @@ ArtistData:
       date_end: '2016-05-01'
       title: The Human Soul" (6)
       locations:
-      - Bad Reichenhall,,DEU,
+      - Bad Reichenhall,,DEU,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_badheichenhall-16.html
@@ -468,7 +468,7 @@ ArtistData:
       date_end: ''
       title: '"The Evolution of Consciousness" (2)'
       locations:
-      - Vienna,,AUT,
+      - Vienna,,AUT,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_vienna_16.html
@@ -491,7 +491,7 @@ ArtistData:
       date_end: ''
       title: '"24-7 - and The Coming Tools" (2)'
       locations:
-      - Birmingham,,GBR,
+      - Birmingham,,GBR,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Birmingham_16.html
@@ -513,7 +513,7 @@ ArtistData:
       date_end: ''
       title: '"The Consciousness Bridge" (science) (1)'
       locations:
-      - Krakow,,POL,
+      - Krakow,,POL,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Krakow_16.html
@@ -534,7 +534,7 @@ ArtistData:
       date_end: '2016-05-14'
       title: '"DNA - Consciousness" (3)'
       locations:
-      - Basel,,CHE,
+      - Basel,,CHE,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_basel-16.html
@@ -558,7 +558,7 @@ ArtistData:
       date_end: ''
       title: '"The Compassion Factor" (2)'
       locations:
-      - Hamburg,,DEU,
+      - Hamburg,,DEU,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_hamburg_16.html
@@ -580,7 +580,7 @@ ArtistData:
       date_end: '2016-05-22'
       title: The Holland Experience (4)
       locations:
-      - Amsterdam,,NLD,
+      - Amsterdam,,NLD,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_Holland_16.html
@@ -607,7 +607,7 @@ ArtistData:
       date_end: '2016-05-29'
       title: Kryon in Budapest (5)
       locations:
-      - Budapest,,HUN,
+      - Budapest,,HUN,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_budapest-16.html
@@ -640,7 +640,7 @@ ArtistData:
       date_end: '2016-06-17'
       title: Arkansas Crystalline Mine (4)
       locations:
-      - Mt. Ida,AR,USA,
+      - Mt. Ida,AR,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_arkansasmine_16.html
@@ -667,7 +667,7 @@ ArtistData:
       date_end: '2016-06-12'
       title: Summer Light Conference (7)
       locations:
-      - Hot Springs,AR,USA,
+      - Hot Springs,AR,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_SLC-16.html
@@ -704,7 +704,7 @@ ArtistData:
       date_end: ''
       title: 90 Minute Panel - "The Three Amigos" (1)
       locations:
-      - Hot Springs,AR,USA,
+      - Hot Springs,AR,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_panel-SLC_16.html
@@ -734,7 +734,7 @@ ArtistData:
       date_end: ''
       title: The Crystalline Choir Channellings (1)
       locations:
-      - Hot Springs,AR,USA,
+      - Hot Springs,AR,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_C-Choir_16.html
@@ -757,7 +757,7 @@ ArtistData:
       date_end: '2016-07-03'
       title: Laguna Hills, California (4)
       locations:
-      - Laguna Hills,CA,USA,
+      - Laguna Hills,CA,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_laguna-16.html
@@ -781,7 +781,7 @@ ArtistData:
       date_end: '2016-07-10'
       title: Delphi University, McCaysville (3)
       locations:
-      - Mccaysville,GA,USA,
+      - Mccaysville,GA,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_delphi-16.html
@@ -805,7 +805,7 @@ ArtistData:
       date_end: '2016-07-17'
       title: Grand Rapids, Michigan (3)
       locations:
-      - Grand Rapids,MI,USA,
+      - Grand Rapids,MI,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_grandrapids-16.html
@@ -828,7 +828,7 @@ ArtistData:
       date_end: '2016-07-24'
       title: Portland, Oregon (3)
       locations:
-      - Portland,OR,USA,
+      - Portland,OR,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_portland-O-16.html
@@ -851,7 +851,7 @@ ArtistData:
       date_end: ''
       title: Anchorage, Alaska (1)
       locations:
-      - Anchorage,AK,USA,
+      - Anchorage,AK,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_anchorage_16.html
@@ -872,7 +872,7 @@ ArtistData:
       date_end: '2016-08-14'
       title: Fairfield, Iowa (3)
       locations:
-      - Fairfiled,IA,USA,
+      - Fairfiled,IA,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_fairfield-16.html
@@ -895,7 +895,7 @@ ArtistData:
       date_end: ''
       title: '"Rewriting the Past" - St. Louis, Missouri (2)'
       locations:
-      - St. Louis,MO,USA,
+      - St. Louis,MO,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_stlouis_16.html
@@ -917,7 +917,7 @@ ArtistData:
       date_end: ''
       title: '"Opening to a Larger Akash" - Indianapolis, Indiana (2)'
       locations:
-      - Indianapolis,IN,USA,
+      - Indianapolis,IN,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_indy_16.html
@@ -939,7 +939,7 @@ ArtistData:
       date_end: ''
       title: '"Ireland Revealed" - Cork, Ireland (2)'
       locations:
-      - Cork,,IRL,
+      - Cork,,IRL,Europe
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_cork_16.html
@@ -961,7 +961,7 @@ ArtistData:
       date_end: '2016-09-11'
       title: The Ireland Adventure (8)
       locations:
-      - ",,IRL,"
+      - ",,IRL,Europe"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_ireland_16.html
@@ -1002,7 +1002,7 @@ ArtistData:
       date_end: '2016-09-14'
       title: Bergamo, Italy (4)
       locations:
-      - ",,ITA,"
+      - ",,ITA,Europe"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_burgamo_16.html
@@ -1028,7 +1028,7 @@ ArtistData:
       date_end: '2016-09-18'
       title: Athens, Greece (4)
       locations:
-      - ",,GRC,"
+      - ",,GRC,Europe"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_athens_16.html
@@ -1055,7 +1055,7 @@ ArtistData:
       date_end: '2016-09-28'
       title: Greece Goddess Tour 2016 (12)
       locations:
-      - ",,GRC,"
+      - ",,GRC,Europe"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_greece_16.html
@@ -1106,7 +1106,7 @@ ArtistData:
       date_end: ''
       title: Brisbane, Australia (2)
       locations:
-      - Brisbane,,AUS,
+      - Brisbane,,AUS,Australia
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_brisbane_16.html
@@ -1129,7 +1129,7 @@ ArtistData:
       date_end: ''
       title: Melbourne, Australia (2)
       locations:
-      - Melbourne,,AUS,
+      - Melbourne,,AUS,Australia
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_melbourne_16.html
@@ -1152,7 +1152,7 @@ ArtistData:
       date_end: ''
       title: Sydney, Australia (2)
       locations:
-      - Sydney,,AUS,
+      - Sydney,,AUS,Australia
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_sydney_16.html
@@ -1175,7 +1175,7 @@ ArtistData:
       date_end: '2016-10-21'
       title: Global Consciousness Retreat 4 - New Zealand - Part 1 (8)
       locations:
-      - ",,NZL,"
+      - ",,NZL,Oceania"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_newzealand_16.html
@@ -1211,7 +1211,7 @@ ArtistData:
       date_end: '2016-10-27'
       title: KRYON Southern Lemurian Adventure - New Zealand - Part 2 (6)
       locations:
-      - ",,NZL,"
+      - ",,NZL,Oceania"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_newzealand-2_16.html
@@ -1247,7 +1247,7 @@ ArtistData:
       date_end: ''
       title: Auckland, New Zealand (2)
       locations:
-      - ",,NZL,"
+      - ",,NZL,Oceania"
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_auckland_16.html
@@ -1270,7 +1270,7 @@ ArtistData:
       date_end: '2016-11-20'
       title: Wilmington, NC "Wild Cards" (3)
       locations:
-      - Wilmington,NC,USA,
+      - Wilmington,NC,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_wilmington-16.html
@@ -1293,7 +1293,7 @@ ArtistData:
       date_end: ''
       title: Newport, CA - "When the Butterfy flaps..." (2)
       locations:
-      - Newport,CA,USA,
+      - Newport,CA,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_newport_16.html
@@ -1315,7 +1315,7 @@ ArtistData:
       date_end: '2016-12-11'
       title: Las Vegas, NV - "Numerology" - (3)
       locations:
-      - Las Vegas,NV,USA,
+      - Las Vegas,NV,USA,North America
       languages:
       - eng
       url: http://www.kryon.com/cartprodimages/2016%20downloads/download_vegas_16.html
@@ -1355,7 +1355,7 @@ ArtistData:
       mirrors: {}
     http://audio.kryon.com/en/Boulder-SAT-main-16.mp3: !ruby/object:UncleKryon::AumData
       updated_on: '2018-08-04 00:50:12'
-      title: "What You Don't Know"
+      title: What You Don't Know
       subtitle: KRYON SATURDAY
       languages: []
       timespan: '0:28:49'
