--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /_yardoc/
 /coverage/
 /doc/
+/hax/
 /lib/bundler/man/
 /pkg/
 /rdoc/
@@ -21,3 +22,4 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+/train/
