--- a/iso/iso.yaml
+++ b/iso/iso.yaml
@@ -4,4 +4,5 @@ ISO: !ruby/object:UncleKryon::Iso
   updated_countries_on: '2018-06-11 17:41:10'
   updated_languages_on: '2018-06-11 17:54:13'
   updated_regions_on: '2018-06-11 17:35:28'
+  updated_subregions_on: '2019-07-26 11:11:11'
   updated_usa_states_on: '2018-06-11 17:31:44'
